added order details

--- a/app/views/carts/_empty.html.erb
+++ b/app/views/carts/_empty.html.erb
@@ -1,3 +1,3 @@
 <div class="cart-empty alert alert-primary">
-<h5> Nothing in cart yet! <a href="/">Keep shopping</a> </h5>
+<h5> Nothing in cart yet! <%= link_to "Keep shopping", "/" %> </h5>
 </div>
