added admin dash

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<br>
+<br>
+<table class="table table-bordered">
+      <thead class="thead-light">
+        <tr>
+          <th> Admin Dashboard </th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr> 
+          <td> Products </td>
+          <td> <%= @products %> </td>
+        </tr>
+        <tr> 
+          <td> Categories </td>
+          <td> <%= @categories %> </td>
+        </tr>
+      </tbody>
+</table>
