--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,42 +43,11 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
-      <% unless current_user %>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-danger"
-            href="#"
-            id="navbarDropdownAdmin"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Admin
-          </a>
-          <ul class="dropdown-menu dropdown-menu-dark">
-            <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
-            <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
-            <li><%= link_to 'Categories', '/admin/categories/index', class: "nav-link" %></li>
-          </ul>
-        </li>
-        <li class="nav-item end-0">
-          <%= link_to "cart_path", class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
-          My Cart (<%= cart.size %>) <% end %>
-        </li>
-        <li class="nav-item end-0">
-        <%= link_to "About", "/about/index" , class: "nav-link" %>
-        </li>
-        <li class="nav-item end-0">
-        <%= link_to "Log Out", new_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
-        </li>
-      <% else %>
-        <li class="nav-item end-0">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item end-0">
-        <%= link_to "About", "/about/index" , class: "nav-link" %>
-        </li>
-      <% end %>
+        <% if current_user %>
+          <%= render '/layouts/logged_in' %>
+        <% else %>
+          <%= render '/layouts/logged_out' %>
+        <% end %>
       </ul>
     </div>
   </div>
