--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,3 @@
-<h1>Users</h1>
-
-<%= link_to 'New User', new_user_path %>
-
-<table>
-  <thead>
-    <tr>
-      <th>id</th>
-      <th>email</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.id %></td>
-        <td><%= user.email %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% if current_user.first_name %>
+  <h1>Welcome, <%= current_user.first_name %></h1>
+  <% end %>
