--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,13 @@
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
+  <% flash.each do |type, msg| %>
+    <div>
+      <br>
+      <h5 class="alert alert-primary"> <%= msg %> </h5>
+    </div>
+  <% end %>
+
     <%= yield %>
   </main>
 
