--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -44,7 +44,7 @@
         </div>
 
         <div class="form-group">
-          <%= form.label :price %>
+          <%= form.label :price_cents %>
           <%= form.text_field :price, class: 'form-control' %>
         </div>
 
