--- a/app/views/carts/_with_items.html.erb
+++ b/app/views/carts/_with_items.html.erb
@@ -28,14 +28,15 @@
 <div class="row">
 <div class="col-xs-12">
   <%= form_tag orders_path do %>
+    <% user = User.find_by_id(session[:user_id]) %>
     <script
       src="https://checkout.stripe.com/checkout.js" class="stripe-button"
       data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
       data-amount="<%= humanized_money_with_symbol cart_subtotal_cents %>"
       data-name="Jungle"
-      data-description="Khurram Virani's Jungle Order"
+      data-description="<%=user.first_name%>'s Jungle Order"
       data-locale="auto"
-      data-email="kvirani@gmail.com"
+      data-email="<%= user.email %>"
       data-currency="cad">
     </script>
   <% end %>
